contact link addition

--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
       <div class="col-md-4">
         <div class="container">
           <h1 style="font-size: 72px;">Keshav<br>Kannan</h1>
-          <a href="#" id="brand" style="display:inline; font-size: 15px;">Instagram</a> |
-          <a href="#" id="brand" style="display:inline; font-size: 15px;">LinkedIn</a> |
-          <a href="#" id="brand" style="display:inline; font-size: 15px;">GitHub</a>
+          <a href="https://www.instagram.com/kkeshav_2711/" id="brand" style="display:inline; font-size: 15px;">Instagram</a> |
+          <a href="https://www.linkedin.com/in/k-keshav-951024261/" id="brand" style="display:inline; font-size: 15px;">LinkedIn</a> |
+          <a href="https://github.com/KKeshav1101" id="brand" style="display:inline; font-size: 15px;">GitHub</a>
           <div><a id="b1" href="#page5">CONTACT ME</a></div>
         </div>
       </div>
@@ -220,19 +220,19 @@
     </div>
     <div class="contact-frame row justify-content-center">
       <div class="contact col-auto mb-3">
-        <img src="png/bx-message-dots.png" width="28px">
+        <img alt="9940611298" src="png/bx-message-dots.png" width="28px">
       </div>
       <div class="contact col-auto mb-3">
-        <img src="png/bxl-gmail.png" width="28px">
+        <img href="k.keshav1101@gmail.com" src="png/bxl-gmail.png" width="28px">
       </div>
       <div class="contact col-auto mb-3">
-        <img src="png/bxl-instagram.png" width="28px">
+        <img href="https://www.instagram.com/kkeshav_2711/" src="png/bxl-instagram.png" width="28px">
       </div>
       <div class="contact col-auto mb-3">
-        <img src="png/bxl-linkedin.png" width="28px">
+        <img href="https://www.linkedin.com/in/k-keshav-951024261/" src="png/bxl-linkedin.png" width="28px">
       </div>
       <div class="contact col-auto mb-3">
-        <img src="png/bxl-github.png" width="28px">
+        <img href="https://github.com/KKeshav1101" src="png/bxl-github.png" width="28px">
       </div>
     </div>
     <div style="text-align: center;background-color: black;color:aliceblue; width :100%;bottom:0px;position:static;">
