--- a/index.html
+++ b/index.html
@@ -220,19 +220,19 @@
     </div>
     <div class="contact-frame row justify-content-center">
       <div class="contact col-auto mb-3">
-        <img alt="9940611298" src="png/bx-message-dots.png" width="28px">
+        <a><img alt="9940611298" src="png/bx-message-dots.png" width="28px"></a>
       </div>
       <div class="contact col-auto mb-3">
-        <img href="k.keshav1101@gmail.com" src="png/bxl-gmail.png" width="28px">
+        <a href="k.keshav1101@gmail.com"><img src="png/bxl-gmail.png" width="28px"></a>
       </div>
       <div class="contact col-auto mb-3">
-        <img href="https://www.instagram.com/kkeshav_2711/" src="png/bxl-instagram.png" width="28px">
+        <a href="https://www.instagram.com/kkeshav_2711/"><img src="png/bxl-instagram.png" width="28px"></a>
       </div>
       <div class="contact col-auto mb-3">
-        <img href="https://www.linkedin.com/in/k-keshav-951024261/" src="png/bxl-linkedin.png" width="28px">
+        <a href="https://www.linkedin.com/in/k-keshav-951024261/"><img src="png/bxl-linkedin.png" width="28px"></a>
       </div>
       <div class="contact col-auto mb-3">
-        <img href="https://github.com/KKeshav1101" src="png/bxl-github.png" width="28px">
+        <a href="href="https://www.linkedin.com/in/k-keshav-951024261/"><img src="png/bxl-github.png" width="28px"></a>
       </div>
     </div>
     <div style="text-align: center;background-color: black;color:aliceblue; width :100%;bottom:0px;position:static;">
