further link fixes

--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
             </a>
             <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarScrollingDropdown">
               <li><a class="dropdown-item" href="k.keshav1101@gmail.com">Mail</a></li>
-              <li>Phone - 91-9940611298</li>
+              <li>Text 91-9940611298</li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Instagram</a></li>
+              <li><a class="dropdown-item" href="https://www.instagram.com/kkeshav_2711/">Instagram</a></li>
               <li><a class="dropdown-item" href="https://github.com/KKeshav1101">Github</a></li>
-              <li><a class="dropdown-item" href="#">LinkedIn</a></li>
+              <li><a class="dropdown-item" href="https://www.linkedin.com/in/k-keshav-951024261/">LinkedIn</a></li>
             </ul>
           </li>
         </ul>
@@ -232,7 +232,7 @@
         <a href="https://www.linkedin.com/in/k-keshav-951024261/"><img src="png/bxl-linkedin.png" width="28px"></a>
       </div>
       <div class="contact col-auto mb-3">
-        <a href="href="https://www.linkedin.com/in/k-keshav-951024261/"><img src="png/bxl-github.png" width="28px"></a>
+        <a href="https://www.linkedin.com/in/k-keshav-951024261/"><img src="png/bxl-github.png" width="28px"></a>
       </div>
     </div>
     <div style="text-align: center;background-color: black;color:aliceblue; width :100%;bottom:0px;position:static;">
