--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
               Contact
             </a>
             <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarScrollingDropdown">
-              <li><a class="dropdown-item" href="k.keshav1101@gmail.com">Mail</a></li>
+              <li><a class="dropdown-item" href="mailto: k.keshav1101@gmail.com">Mail</a></li>
               <li>Text 91-9940611298</li>
               <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item" href="https://www.instagram.com/kkeshav_2711/">Instagram</a></li>
