--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
               Contact
             </a>
             <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarScrollingDropdown">
-              <li><a class="dropdown-item" href="mailto: k.keshav1101@gmail.com">Mail</a></li>
-              <li>Text 91-9940611298</li>
+              <li><a class="dropdown-item" href="mailto:k.keshav1101@gmail.com">Mail</a></li>
+              <li><a class="dropdown-item" href="sms:919940611298">SMS</a></li>
               <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item" href="https://www.instagram.com/kkeshav_2711/">Instagram</a></li>
               <li><a class="dropdown-item" href="https://github.com/KKeshav1101">Github</a></li>
@@ -220,10 +220,10 @@
     </div>
     <div class="contact-frame row justify-content-center">
       <div class="contact col-auto mb-3">
-        <a><img alt="9940611298" src="png/bx-message-dots.png" width="28px"></a>
+        <a><img href="sms:9940611298" src="png/bx-message-dots.png" width="28px"></a>
       </div>
       <div class="contact col-auto mb-3">
-        <a href="k.keshav1101@gmail.com"><img src="png/bxl-gmail.png" width="28px"></a>
+        <a href="mailto:k.keshav1101@gmail.com"><img src="png/bxl-gmail.png" width="28px"></a>
       </div>
       <div class="contact col-auto mb-3">
         <a href="https://www.instagram.com/kkeshav_2711/"><img src="png/bxl-instagram.png" width="28px"></a>
